# efficient_quadtree

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  seamless_cloning.cpp
src/: CMakeLists.txt  clone.cpp  poisson_solver.cpp
